infra/thmanyah/prometheus/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: prometheus-ns
  labels:
    app: alertmanager
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 9093
    targetPort: 9093
    protocol: TCP
  - name: cluster-tcp
    port: 9094
    targetPort: 9094
    protocol: TCP
  - name: cluster-udp
    port: 9094
    targetPort: 9094
    protocol: UDP
  selector:
    app: alertmanager
