infra/thmanyah/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus-ns
  labels:
    app: prometheus
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 9090
    targetPort: 9090
    protocol: TCP
  selector:
    app: prometheus
